--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -61,6 +61,7 @@
     <div class="article-content">
       <ol>
 <li>📚 <a href="/regression/regression1.html">Slide 1: Introduction to regression analysis</a></li>
+<li>📚 <a href="/regression/regression2.html">Slide 2: Introduction to regression analysis</a></li>
 </ol>
 
     </div>
