--- a/public/regression/regression3.html
+++ b/public/regression/regression3.html
@@ -173,6 +173,14 @@ background-image: url('variation.PNG')
 background-position: center
 background-size: contain
 
+
+---
+
+background-image: url('weight2.png')
+background-position: center
+background-size: contain
+
+
 ---
 
 ```r
@@ -273,6 +281,7 @@ background-size: contain
 .pull-left[
 This is useful for detecting several common types of model inadequacies.
 ]
+
 
 ---
 
@@ -378,10 +387,9 @@ W = 0.99859, p-value = 0.3334
 
 `\(SS_T\)` - A measure of the variability in `\(y\)` without considering the effect of the regressor variable `\(x\)`.
 
-
 Measures the variation of  `\(y\)` values around their mean.
 
-`$$SS_R$$` - Explained variation attributable to factors other than the relationship between `\(x\)` and `\(y\)`.
+`\(SS_R\)` - Explained variation attributable to factors other than the relationship between `\(x\)` and `\(y\)`.
 
 `\(SS_{Res}\)` - A measure of the variability in `\(y\)` remaining after `\(x\)` has been considered.
 
