--- a/static/regression/regression8.html
+++ b/static/regression/regression8.html
@@ -245,11 +245,11 @@ This means that if `\(X_1\)` (`biking`) remains fixed, we are 95% confidence tha
 
 `$$Y = \beta_0 + \beta_1X_1 + \beta_2X_2 + \epsilon$$`
 
-where 
+where,
 
-`\(Y\)` - percentage of people with heart disease
+`\(Y\)` - percentage of people with heart disease, 
 
-`\(X_1\)` - percentage of people in each town who bike to work
+`\(X_1\)` - percentage of people in each town who bike to work, 
 
 `\(X_2\)` - percentage of people in each town who smoke
 
@@ -271,25 +271,21 @@ Coefficients:
 ```
 
 
-`\(\hat{Y} = 14.9847 - 0.2001X_1 + 0.1783X_2\)`
-
-where 
-
-`\(\hat{Y}\)` - Fitted values
+`\(\hat{Y} = 14.9847 - 0.2001X_1 + 0.1783X_2\)`, where `\(\hat{Y}\)` - Fitted values.
 
 
 ---
 
-### Confidence Interval Estimation of the Mean Response at a Given Point
+#### Confidence Interval Estimation of the Mean Response at a Given Point
 
-Suppose we have an observation `\(X_1 = 60\)` and `\(X_2=20\)` and we would like to find a 95% confidence interval on the percentage of people with heart disease
+Suppose we have an observation `\(X_1 = 30.8\)` and `\(X_2=10.9\)` and we would like to find a 95% confidence interval on the percentage of people with heart disease
 
 
 **The fitted value at this point is:**
 
 `\(\hat{Y} = 14.9847 - 0.2001X_1 + 0.1783X_2\)`
 
-`\(\hat{Y} = 14.9847 - 0.2001(60) + 0.1783(20) = 6.54\)`
+`\(\hat{Y} = 14.9847 - 0.2001(30.8) + 0.1783(10.9) = 10.764\)`
 
 
 **A 95% confidence interval on the mean percentage of people with heart disease at this point is:**
@@ -297,19 +293,19 @@ Suppose we have an observation `\(X_1 = 60\)` and `\(X_2=20\)` and we would like
 
 
 ```r
-predict(regHeart, list(biking = 60, smoking = 20),
+predict(regHeart, list(biking = 30.8, smoking = 10.9),
 interval='confidence', level=0.95)
 ```
 
 ```
-       fit      lwr     upr
-1 6.543353 6.454927 6.63178
+      fit      lwr      upr
+1 10.7644 10.69625 10.83255
 ```
 
 
 **Interpretation: **
 
-We can be 95% confident that the **mean percentage of people with heart disease** of  all towns at `\(X_1 (biking)=60\)` and `\(X_2 (smoking)=20\)` is between 6.45 and 6.63 percent.
+We can be 95% confident that the **mean percentage of people with heart disease** of  all towns at `\(X_1 (biking)=30.8\)` and `\(X_2 (smoking)=10.9\)` is between 10.69 and 10.83 percent.
 
 ---
 
@@ -347,18 +343,18 @@ Purpose: Illustrate the difference between confidence intervals for mean and pre
 
 ### Prediction of the mean response
 
-A 95% confidence interval on the **mean** percentage of people with heart disease at the point at `\(X_1=60\)` and `\(X_2=20\)`.
+A 95% confidence interval on the **mean** percentage of people with heart disease at the point at `\(X_1=30.8\)` and `\(X_2=10.9\)`.
 
 
 
 ```r
-predict(regHeart, list(biking = 60, smoking = 20),
+predict(regHeart, list(biking = 30.8, smoking = 10.9),
 interval='confidence', level=0.95)
 ```
 
 ```
-       fit      lwr     upr
-1 6.543353 6.454927 6.63178
+      fit      lwr      upr
+1 10.7644 10.69625 10.83255
 ```
 
 ### Prediction of a future value
@@ -380,20 +376,20 @@ interval='predict', level=0.95)
 
 .content-box-yellow[Prediction of the mean response]
 
-what would be the average (mean) response with characteristics `\(X_1=60\)` and `\(X_2=20\)` ?
+what would be the average (mean) response with characteristics `\(X_1=30.8\)` and `\(X_2=10.9\)` ?
 
 
 ```r
-predict(regHeart, list(biking = 60, smoking = 20),
+predict(regHeart, list(biking = 30.8, smoking = 10.9),
 interval='confidence', level=0.95)
 ```
 
 ```
-       fit      lwr     upr
-1 6.543353 6.454927 6.63178
+      fit      lwr      upr
+1 10.7644 10.69625 10.83255
 ```
 
-We predict the mean value of `\(Y\)` with characteristics `\(X_1=60\)` and `\(X_2=20\)`.
+We predict the mean value of `\(Y\)` with characteristics `\(X_1=30.8\)` and `\(X_2=10.9\)`.
 
 .content-box-yellow[Prediction of a future value]
 
@@ -423,31 +419,26 @@ Prediction interval for a new response.
 
 
 
-```r
-predict(regHeart, list(biking = 60, smoking = 20),
-interval='confidence', level=0.95)
+```
+      fit      lwr      upr
+1 10.7644 10.69625 10.83255
 ```
 
-```
-       fit      lwr     upr
-1 6.543353 6.454927 6.63178
-```
+We can be 95% confident that the **mean percentage of people with heart disease** of  all towns at `\(X_1 (biking)=30.8\)` and `\(X_2 (smoking)=10.9\)` is between 10.69 and 10.83 percent.
+
+
 
 
 .full-width[.content-box-yellow[Prediction of a future value]]
 
 
 
-```r
-predict(regHeart, list(biking = 60, smoking = 20),
-interval='predict', level=0.95)
-```
-
 ```
        fit      lwr      upr
 1 6.543353 5.255293 7.831413
 ```
 
+We can be 95% confident that the **percentage of people with heart disease** at a town at `\(X_1=60\)` and `\(X_2=20\)` will be between 5.25 and 7.83 percent.
 
 
 ---
